quota-demo/quota-demo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quota-demo
  annotations:
    openshift.io/node-selector: ""
    argocd.argoproj.io/sync-wave: "0"
  labels:
    openshift.io/cluster-monitoring: "true"
