quota-demo/hello-kubernetes-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quota-demo
  name: hello-kubernetes
  annotations:
    argocd.argoproj.io/sync-wave: '2'
spec:
  selector:
    matchLabels:
      app: hello-kubernetes
  replicas: 4
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
        - name: container
          image: 'docker.io/paulbouwer/hello-kubernetes:1.5'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 175m
              memory: 175Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
