quota-demo/hello-kubernetes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: hello-kubernetes-svc
  namespace: quota-demo
spec:
  selector:
    app: hello-kubernetes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
