quota-demo/hello-kubernetes-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: hello-kubernetes-route
  namespace: quota-demo
spec:
  to:
    kind: Service
    name: hello-kubernetes-svc
  port:
    targetPort: 8080
